--- a/.github/workflows/grab-vidio.yml
+++ b/.github/workflows/grab-vidio.yml
@@ -3,7 +3,10 @@ name: Grab Vidio Livestreaming Data
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * * *" # setiap 1 jam
+    - cron: "0 * * * *" # tiap jam
+
+permissions:
+  contents: write   # ⬅️ WAJIB untuk push
 
 jobs:
   grab:
@@ -12,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -24,8 +29,16 @@ jobs:
         run: |
           php scripts/grab_vidio.php
 
-      - name: Upload result artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: vidio-result
-          path: result.json
+      - name: Commit result.json if changed
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          git add result.json
+
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: update vidio livestreaming data"
+            git push
+          fi
