--- a/.github/workflows/grab-vidio.yml
+++ b/.github/workflows/grab-vidio.yml
@@ -1,59 +1,38 @@
-name: Grab Vidio Livestreaming Data
+name: Build Playlist & EPG
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * * *" # tiap jam
+    - cron: "*/15 * * * *"
 
 permissions:
   contents: write
 
 jobs:
-  grab:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: true
+      - uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@v2
         with:
           php-version: "8.2"
 
-      - name: Run grabber
-        env:
-          VIDIO_API_KEY: ${{ secrets.VIDIO_API_KEY }}
-          VIDIO_USER_EMAIL: ${{ secrets.VIDIO_USER_EMAIL }}
-          VIDIO_USER_TOKEN: ${{ secrets.VIDIO_USER_TOKEN }}
-          VIDIO_VISITOR_ID: ${{ secrets.VIDIO_VISITOR_ID }}
-        run: |
-          php scripts/grab_vidio.php
-          
-      - name: Generate M3U8 playlists
-        run: |
-          php scripts/generate_m3u.php
-          
-      - name: Generate master M3U8 playlist
-        run: |
-          php scripts/generate_m3u_master.php
+      - name: Fetch source data
+        run: php scripts/fetch_source.php
 
-      - name: Generate EPG XML
-        run: |
-          php scripts/generate_epg.php
+      - name: Generate playlist & epg
+        run: php scripts/generate_from_json.php
 
-      - name: Commit data if changed
+      - name: Commit if changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
           git add data/
-
           if git diff --cached --quiet; then
-            echo "No changes to commit"
+            echo "No changes"
           else
-            git commit -m "chore: update vidio data split by channel & league"
+            git commit -m "update playlist & epg"
             git push
           fi
