--- a/.github/workflows/grab-vidio.yml
+++ b/.github/workflows/grab-vidio.yml
@@ -3,7 +3,8 @@ name: Build Playlist & EPG
 on:
   workflow_dispatch:
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "0 0 * * *" # 07:00 WIB
+
 
 permissions:
   contents: write
